# app_dibujo_proyecto-main

./: .aflow  .gitattributes  .gitignore  BRUSH_STUDIO_TODO.md  CMakeLists.txt  ColorPickerRenderer.cpp  KromoStudio.apk.idsig  LICENSE  Makefile  README.md  Roadmap_Competitividad.md  abr_analysis_output.txt  abr_debug.py  abr_desc.py  abr_list_blocks.py  app.bat  app.ps1  auto_build.bat  build.bat  build_and_check.bat  build_android.bat  build_error_gl.txt  build_error_manga.txt  build_errors.txt  build_fail_log.txt  build_log.txt  build_log_v2.txt  build_log_v3.txt  build_out.txt  build_verbose.txt  canvas_draw_debug.txt  clean_rebuild.bat  colorize_icons.py  configure_cmake.bat  debug_curve.txt  download_extra_icons.py  download_eyedropper.py  download_icons.py  ejecutar_app.bat  first_qml_errors.txt  (+21 more)
.gemini/: brush_studio_implementation_plan.md  brush_studio_plan.md  canvas_modes_plan.md  implementation_plan.md
.qtcreator/: CMakeLists.txt.user.5f9213b
Boton Trasnparente/: COMPARATIVA_VISUAL.txt  EJEMPLO_INTEGRACION_BORRADOR.py  README_BORRADOR.md  colors_panel.py  main_window.py
Color picker/: ColorStudioDialog_Improved.qml  ImprovedColorSlider.qml  README_QML_Integration.md
Color wheel arreglo/: ColorStudioDialog_FixedWheel.qml  WHEEL_SEPARATION_FIX.md
Nueva Pestaña de inicio/: CANVAS_MODES_DOCUMENTATION.md  CanvasMode_Premium.qml  main_pro.qml  performance_fixes.md
Nueva carpeta/: CMakeLists.txt  ColorPicker.cpp  ColorPicker.h  README.md  example_usage.cpp
brush stroke/: BrushStroke.cpp  BrushStroke.h  INTEGRACION.cpp  Makefile  README_CPP.md  main.cpp
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build_debug_winink/: CMakeCache.txt  Makefile  cmake_install.cmake
build_mingw/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_debug.bat  build_full.bat  build_result.txt  cmake_install.cmake  compile_commands.json  test_qt.cpp
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
color wheel 2/: PREMIUM_SLIDERS_GUIDE.md  PremiumColorSlider.qml  SlidersSectionReplacement.qml
data/: brushes.json  playlists.json  resources.json
docs/: Funcionalidades_Completadas.md  Mejoras_Modo_Ilustracion.md  RECOMMENDED_FEATURES.md  ROADMAP.md  Walkthrough_Mapa_Degradado.md
release/: KromoStudio.apk.idsig
scratch/: check_all_qml_braces.py  generate_hugeicon.py  test_braces.py  test_fit.cpp
scripts/: app.bat  app.ps1  auto_build.bat  build.bat  build_and_check.bat  build_android.bat  build_project.bat  build_python_ext.bat  check_braces.py  check_png.py  clean_rebuild.bat  configure_cmake.bat  create_unique_textures.py  debug_run.bat  ejecutar_app.bat  fix_cursor_nuclear.py  gen_flat_bristle.py  gen_palette_knife.py  gen_round_filbert.py  generate_brushes.py  generate_grain_textures.py  generate_icons.py  generate_oil_brush.py  generate_tips.py  generate_watercolor_tips.py  rebuild_run.bat  regenerate_small_textures.py  repair_build.bat  run.bat  run_app.bat  run_debug.bat  run_log.txt  run_pro.py  run_pro_clean.py  run_pro_trace.py  run_qml_simple.py  shader_debug.txt  test_launch.ps1  update_brush_definitions.py  update_canvas.py  (+2 more)
security/: my-release-key.jks
src/: CanvasItem.cpp  CanvasItem.h  IconProvider.h  PreferencesManager.cpp  PreferencesManager.h  ProjectModel.cpp  ProjectModel.h  TestCanvas.cpp  TestCanvas.h  WintabManager.cpp  WintabManager.h  icon_provider.py  main.cpp  main.py  run_pro.py  run_pro_clean.py  run_pro_trace.py  run_qml.py  (+3 more)
src/core/: CMakeLists.txt  abr_importer.cpp  abr_importer.h  brush_presets.py  drawing_engine.py  layer.py  preferences_manager.py
src/core/bindings/: python_bindings.cpp
src/core/brushes/: abr_importer.cpp  abr_importer.h  abr_parser.cpp  abr_parser.h  brush_engine.cpp  brush_engine.h  brush_stroke.cpp  brush_stroke.h
src/core/canvas/: canvas.cpp  canvas.h  renderer.cpp  renderer.h
src/core/cpp/: CMakeLists.txt  artflow_native.cp311-win_amd64.pyd  artflow_native.cp314-win_amd64.pyd  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_attempt_4.txt  build_log_attempt_5.txt  build_log_attempt_6.txt  build_log_attempt_7.txt  build_log_final.txt  check_headers.py  check_headers_v2.py  debug_qt_dirs.py  debug_qt_dirs_v2.py  gl_headers_debug.txt  gl_headers_debug_v2.txt  setup.py
src/core/cpp/include/: ColorPicker.h  ColorPickerImpl.h  ColorPickerRenderer.h  PerspectiveRuler.h  SpeechBalloon.h  animation_frame.h  animation_manager.h  animation_track.h  brush_engine.h  brush_preset.h  brush_preset_manager.h  color_harmony.h  color_range_selector.h  color_utils.h  common_types.h  drag_zone_calculator.h  edge_detector.h  gl_utils.h  image_buffer.h  layer_manager.h  liquify_engine.h  panel_data.h  panel_list_model.h  panel_manager.h  stroke_renderer.h  stroke_undo_command.h  undo_command.h  undo_commands.h  undo_manager.h  vector_layer_data.h  vector_math.h  vector_types.h  watercolor_engine.h
src/core/cpp/src/: ColorPicker.cpp  ColorPickerImpl.cpp  PerspectiveRuler.cpp  animation_manager.cpp  brush_engine.cpp  brush_preset.cpp  brush_preset_manager.cpp  color_harmony.cpp  color_range_selector.cpp  color_utils.cpp  drag_zone_calculator.cpp  edge_detector.cpp  gl_utils.cpp  image_buffer.cpp  layer_manager.cpp  liquify_engine.cpp  panel_list_model.cpp  panel_manager.cpp  stroke_renderer.cpp  stroke_undo_command.cpp  undo_commands.cpp  undo_manager.cpp  vector_layer_data.cpp  vector_math.cpp  watercolor_engine.cpp
src/core/layers/: layer.cpp  layer.h
src/core/python/: abr_diagnostic.py  abr_diagnostic2.py  abr_parser.py  abr_samp_analysis.py  abr_samp_deep.py  temp_abr_dumper.py  temp_abr_dumper2.py  temp_abr_dumper3.py  temp_abr_dumper4.py  temp_abr_dumper5.py  temp_abr_dumper6.py  temp_abr_dumper7.py  temp_abr_dumper8.py
src/core/rust_core/: Cargo.toml
src/core/rust_core/src/: lib.rs
src/core/shaders/: brush.frag  brush.vert  composition.frag  composition.vert  gradientmap.frag  impasto.frag  liquify.frag  liquify_brush.frag  screentone.frag  text_sdf.frag  watercolor.frag
src/core/tools/: fill_tool.py  selection_tool.py  shape_tool.py  transform_tool.py
(+316 files in other folders)
